--- a/cedint-libra/src/main/resources/templates/allPos.html
+++ b/cedint-libra/src/main/resources/templates/allPos.html
@@ -1,12 +1,11 @@
-
 <!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
+    <title>Document</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
           rel="stylesheet"
@@ -17,17 +16,13 @@
           href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body>
-
     <nav th:insert="~{fragments/general/nav-bar ::navBar }"></nav>
 
     <div class="container-fluid">
         <div class="row">
             <div th:replace="~{fragments/general/left-menu :: left-nav-menu}"></div>
-            <div th:replace="~{fragments/home-page/main-content :: main-content}"></div>
+            <div th:replace="~{fragments/pos-page/main-content :: main-content}"></div>
         </div>
     </div>
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
