Create user page

--- a/cedint-libra/src/main/resources/templates/fragments/general/left-menu.html
+++ b/cedint-libra/src/main/resources/templates/fragments/general/left-menu.html
@@ -52,7 +52,7 @@
                         <i class="bi bi-people me-2"></i> Users
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="userDropdown">
-                        <li><a class="dropdown-item" href="#">Create User</a></li> <!--TODO: Create User form-->
+                        <li><a class="dropdown-item" href="/libra/users/create">Create User</a></li>
                         <li><a class="dropdown-item" href="#">Browse Users</a></li> <!--TODO: Browse Users-->
                     </ul>
                 </li>
