spring security setup4ik

--- a/cedint-libra/src/main/resources/templates/fragments/general/left-menu.html
+++ b/cedint-libra/src/main/resources/templates/fragments/general/left-menu.html
@@ -12,7 +12,7 @@
 <div class="col-md-4 col-lg-2 bg-light sidebar min-vh-100 py-3"   th:fragment="left-nav-menu">
     <nav class="nav nav-pills flex-column">
 
-        <a class="nav-link" href="/home">
+        <a class="nav-link" href="/libra/home">
             <i class="bi bi-speedometer2 me-2"></i> Dashboard
         </a>
 
