--- a/cedint-libra/src/main/resources/templates/fragments/general/nav-bar.html
+++ b/cedint-libra/src/main/resources/templates/fragments/general/nav-bar.html
@@ -1,29 +1,43 @@
+
 <!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Libra</title>
 </head>
 <body>
+
 <div class="navbar navbar-light bg-light" th:fragment="navBar">
     <div class="container-fluid">
-        <a href="/home" class="navbar-brand fs-3 fw-semibold">Libra</a>
 
-        <ul class="nav">
-            <li class="nav-item me-3 align-self-center">
-                <span th:text="${userLogin}">guest</span> <!--TODO: print username after authorizing-->
+        <a href="/libra/home" class="navbar-brand fs-3 fw-semibold">
+            Libra
+        </a>
+
+        <ul class="nav align-items-center">
+
+            <li class="nav-item me-3">
+                <span class="badge rounded-pill bg-primary">
+                    Hello <span class="fw-bold" th:text="${userLogin}">guest</span>
+                </span>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link d-flex align-items-center">
-                    <i class="bi bi-box-arrow-left me-2"></i>
-                    Logout <!--TODO: Logout logic-->
-                </a>
+                <form th:action="@{/libra/logout}" method="post" class="d-flex align-items-center">
+
+                    <i class="bi bi-box-arrow-left me-2 fs-3"></i>
+
+                    <button type="submit" class="btn btn-outline-primary btn-sm">
+                        Logout
+                    </button>
+
+                </form>
             </li>
+
         </ul>
+
     </div>
 </div>
+
 </body>
 </html>
