--- a/cedint-libra/src/main/resources/templates/fragments/home-page/main-content.html
+++ b/cedint-libra/src/main/resources/templates/fragments/home-page/main-content.html
@@ -26,7 +26,7 @@
                             <div class="card-body d-flex flex-column justify-content-between" style="height: 100%;">
                                 <div>
                                     <h5 class="card-title">ASSIGNED ISSUES</h5>
-                                    <h5 class="card-description" th:text="${assignedCount}">0</h5> <!--TODO: Show assigned issues count-->
+                                    <h5 class="card-description" th:text="${assignedCount}">0</h5>
                                 </div>
                                 <div class="mt-auto">
                                     <a href="#" class="btn btn-primary w-100">VIEW DETAILS</a> <!--TODO: view details page-->
@@ -46,7 +46,7 @@
                             <div class="card-body d-flex flex-column justify-content-between" style="height: 100%;">
                                 <div>
                                     <h5 class="card-title">NEW ISSUES</h5>
-                                    <h5 class="card-description" th:text="${newCount}">unknown</h5> <!--TODO: Show new issues count-->
+                                    <h5 class="card-description" th:text="${newCount}">unknown</h5>
                                 </div>
                                 <div class="mt-auto">
                                     <a href="#" class="btn btn-danger w-100">VIEW DETAILS</a> <!--TODO: view details page-->
@@ -65,8 +65,8 @@
                         <div class="col-8">
                             <div class="card-body d-flex flex-column justify-content-between" style="height: 100%;">
                                 <div>
-                                    <h5 class="card-title">PENDING ISSUES</h5> <!--TODO: Show pending issues count-->
-                                    <h5 class="card-description" th:text="${pendingCount}">unknown</h5> <!--TODO: Show new issues count-->
+                                    <h5 class="card-title">PENDING ISSUES</h5>
+                                    <h5 class="card-description" th:text="${pendingCount}">unknown</h5>
                                 </div>
                                 <div class="mt-auto">
                                     <a href="#" class="btn btn-warning w-100">VIEW DETAILS</a> <!--TODO: view details page-->
@@ -85,8 +85,8 @@
                         <div class="col-8">
                             <div class="card-body d-flex flex-column justify-content-between" style="height: 100%;">
                                 <div>
-                                    <h5 class="card-title">IN PROGRESS ISSUES</h5> <!--TODO: Show in progress count-->
-                                    <h5 class="card-description" th:text="${inProgressCount}">unknown</h5> <!--TODO: Show new issues count-->
+                                    <h5 class="card-title">IN PROGRESS ISSUES</h5>
+                                    <h5 class="card-description" th:text="${inProgressCount}">unknown</h5>
                                 </div>
                                 <div class="mt-auto">
                                     <a href="#" class="btn btn-success w-100">VIEW DETAILS</a> <!--TODO: view details page-->
@@ -116,14 +116,14 @@
                             </thead>
 
                             <tbody>
-                            <tr th:each="issue: ${allIssues}">
+                            <tr th:each="issue: ${allIssues}" th:attr="ondblclick=|handleDoubleClick('${issue.id}')|">
                                 <td th:text="${issue.id}">1</td>
                                 <td th:text="${issue.posId}">2</td>
                                 <td th:text="${issue.problemTitle}">Pos title</td>
                                 <td th:text="${issue.userCreatedId}">3</td>
                                 <td th:text="${issue.creationDate}">12/03/26</td>
                                 <td th:text="${issue.generalType}">PROBLEM</td>
-                                <td th:switch="${issue.statusId}">
+                                <td th:switch="${issue.status}">
                                     <span th:case="1" class="badge bg-danger">NEW</span>
                                     <span th:case="2" class="badge bg-success">ASSIGNED</span>
                                     <span th:case="3" class="badge bg-info">IN_PROGRESS</span>
@@ -139,6 +139,13 @@
                     </div>
                 </div>
             </div>
+
+    <script>
+        function handleDoubleClick(id){
+            console.log("CLICKED ON : " + id)
+            window.location.href="/libra/issues/detailed/" + id
+        }
+    </script>
 </div>
 </body>
 </html>
