create issue but there are some problems still DONT MERGE

--- a/cedint-libra/src/main/resources/templates/fragments/general/left-menu.html
+++ b/cedint-libra/src/main/resources/templates/fragments/general/left-menu.html
@@ -38,7 +38,7 @@
                         <i class="bi bi-gear-wide me-2"></i> Issues
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="issueDropdown">
-                        <li><a class="dropdown-item" href="#">Create Issue</a></li> <!--TODO: Create issues from-->
+                        <li><a class="dropdown-item" href="/libra/issues/create">Create Issue</a></li>
                         <li><a class="dropdown-item" href="/libra/home">Browse Issues</a></li>
                     </ul>
                 </li>
