issues count or pos logic added

--- a/cedint-libra/src/main/resources/templates/fragments/pos-page/main-content.html
+++ b/cedint-libra/src/main/resources/templates/fragments/pos-page/main-content.html
@@ -24,10 +24,9 @@
                         <th>Telephone</th>
                         <th>Address</th>
                         <th>Brand</th>
-                        <!-- TODO: adding pos status logic (how many problems pos have)-->
+                        <th>Active Issues</th>
                     </tr>
                     </thead>
-
                     <tbody>
                     <tr th:each="pos: ${allPos}">
                         <td th:text="${pos.name}">1</td>
@@ -35,6 +34,7 @@
                         <td th:text="${pos.telephone}">1</td>
                         <td th:text="${pos.address}">1</td>
                         <td th:text="${pos.brand}">1</td>
+                        <td th:text="${pos.issuesCount}">1</td>
                     </tr>
                     </tbody>
 
