--- a/cedint-libra/src/main/resources/templates/fragments/pos-page/main-content.html
+++ b/cedint-libra/src/main/resources/templates/fragments/pos-page/main-content.html
@@ -19,6 +19,7 @@
                 <table class="table table-hover align-middle">
                     <thead class="table-primary">
                     <tr>
+                        <th>Info</th>
                         <th>Pos. Name</th>
                         <th>Pos. Model</th>
                         <th>Telephone</th>
@@ -29,6 +30,7 @@
                     </thead>
                     <tbody>
                     <tr th:each="pos: ${allPos}">
+                        <td><a th:href="@{/libra/pos/detailed/{id}(id=${pos.id})}" class="btn btn-primary">Info</a></td>
                         <td th:text="${pos.name}">1</td>
                         <td th:text="${pos.model}">1</td>
                         <td th:text="${pos.telephone}">1</td>
