task 'issue appears referenced based on pos id' completed

--- a/cedint-libra/src/main/resources/templates/fragments/general/left-menu.html
+++ b/cedint-libra/src/main/resources/templates/fragments/general/left-menu.html
@@ -24,7 +24,7 @@
                         <i class="bi bi-upc-scan me-2"></i> POS
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="posDropdown">
-                        <li><a class="dropdown-item" href="/libra/pos/create">Create POS</a></li> <!--TODO: Create Pos Form-->
+                        <li><a class="dropdown-item" href="/libra/pos/create">Create POS</a></li>
                         <li><a class="dropdown-item" href="/libra/pos/all">Browse POS</a></li>
                     </ul>
                 </li>
@@ -53,7 +53,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="userDropdown">
                         <li><a class="dropdown-item" href="/libra/users/create">Create User</a></li>
-                        <li><a class="dropdown-item" href="/libra/users/all">Browse Users</a></li> <!--TODO: Browse Users-->
+                        <li><a class="dropdown-item" href="/libra/users/all">Browse Users</a></li>
                     </ul>
                 </li>
             </ul>
