--- a/cedint-libra/src/main/resources/templates/fragments/issue-page/pos-for-issue-part.html
+++ b/cedint-libra/src/main/resources/templates/fragments/issue-page/pos-for-issue-part.html
@@ -47,12 +47,12 @@
             </div>
 
             <!-- TODO: open pos by id-->
-
-            <!--<div class="mt-3 d-flex gap-2">
-                <a class="btn btn-outline-primary btn-sm" th:href="@{/pos/{id}(id=${pos.id})}">
+            <div class="mt-3 d-flex gap-2">
+                <a class="btn btn-outline-primary btn-sm" th:href="@{/libra/pos/detailed/{id}(id=${pos.id})}">
                     <i class="bi bi-box-arrow-up-right me-1"></i>
+                    details
                 </a>
-            </div>-->
+            </div>
         </div>
     </div>
 </div>
