--- a/cedint-libra/src/main/resources/templates/fragments/home-page/main-content.html
+++ b/cedint-libra/src/main/resources/templates/fragments/home-page/main-content.html
@@ -29,7 +29,7 @@
                                     <h5 class="card-description" th:text="${assignedCount}">0</h5>
                                 </div>
                                 <div class="mt-auto">
-                                    <a href="#" class="btn btn-primary w-100">VIEW DETAILS</a> <!--TODO: view details page-->
+                                    <a th:href="@{/libra/issues/status/{statusId} (statusId=${2})}" class="btn btn-primary w-100">VIEW DETAILS</a> <!--TODO: view details page-->
                                 </div>
                             </div>
                         </div>
@@ -49,7 +49,7 @@
                                     <h5 class="card-description" th:text="${newCount}">unknown</h5>
                                 </div>
                                 <div class="mt-auto">
-                                    <a href="#" class="btn btn-danger w-100">VIEW DETAILS</a> <!--TODO: view details page-->
+                                    <a th:href="@{/libra/issues/status/{statusId} (statusId=${1})}" class="btn btn-danger w-100">VIEW DETAILS</a> <!--TODO: view details page-->
                                 </div>
                             </div>
                         </div>
@@ -69,7 +69,7 @@
                                     <h5 class="card-description" th:text="${pendingCount}">unknown</h5>
                                 </div>
                                 <div class="mt-auto">
-                                    <a href="#" class="btn btn-warning w-100">VIEW DETAILS</a> <!--TODO: view details page-->
+                                    <a th:href="@{/libra/issues/status/{statusId} (statusId=${4})}" class="btn btn-warning w-100">VIEW DETAILS</a> <!--TODO: view details page-->
                                 </div>
                             </div>
                         </div>
@@ -89,7 +89,7 @@
                                     <h5 class="card-description" th:text="${inProgressCount}">unknown</h5>
                                 </div>
                                 <div class="mt-auto">
-                                    <a href="#" class="btn btn-success w-100">VIEW DETAILS</a> <!--TODO: view details page-->
+                                    <a th:href="@{/libra/issues/status/{statusId} (statusId=${3})}" class="btn btn-success w-100">VIEW DETAILS</a> <!--TODO: view details page-->
                                 </div>
                             </div>
                         </div>
