--- a/cedint-libra/src/main/resources/templates/fragments/issue-page/issue-detailed-part.html
+++ b/cedint-libra/src/main/resources/templates/fragments/issue-page/issue-detailed-part.html
@@ -107,7 +107,7 @@
                 <button type="submit" class="btn btn-primary">
                     <i class="bi bi-check-lg me-1"></i> SAVE
                 </button>
-                <a th:href="@{/issues}" class="btn btn-outline-secondary">
+                <a th:href="@{/libra/home}" class="btn btn-outline-secondary">
                     CLOSE
                 </a>
             </div>
