--- a/cedint-libra/src/main/resources/templates/fragments/pos-page/pos-detailed.html
+++ b/cedint-libra/src/main/resources/templates/fragments/pos-page/pos-detailed.html
@@ -112,7 +112,9 @@
                 <td th:text="${issue.description}"></td>
                 <td th:text="${issue.solution}"></td>
                 <!-- TODO: solve problem logic -->
-                <button class="btn btn-success">Solve</button>
+                <td>
+                    <a class="btn btn-success">Solve</a>
+                </td>
             </tr>
             </tbody>
         </table>
