--- a/cedint-libra/src/main/resources/templates/issue/create-issue.html
+++ b/cedint-libra/src/main/resources/templates/issue/create-issue.html
@@ -41,11 +41,20 @@
                             Please fix the errors below
                         </div>
 
-                        <!-- REQUIRED hidden: userCreatedId -->
                         <input type="hidden" th:field="*{userCreatedId}"/>
 
-                        <!-- POS -->
-                        <div class="mb-3">
+                        <div class="mb-3" th:if="${form.posId != null}">
+                            <label class="form-label">POS</label>
+
+                            <input type="hidden" th:field="*{posId}"/>
+
+                            <input class="form-control"
+                                   th:value="${selectedPos != null ? selectedPos.name : form.posId}"
+                                   readonly/>
+                            <div class="invalid-feedback" th:errors="*{posId}"></div>
+                        </div>
+
+                        <div class="mb-3" th:if="${form.posId == null}">
                             <label class="form-label">POS</label>
                             <select class="form-select"
                                     th:field="*{posId}"
@@ -59,7 +68,6 @@
                             <div class="invalid-feedback" th:errors="*{posId}"></div>
                         </div>
 
-                        <!-- General Type -->
                         <div class="mb-3">
                             <label class="form-label">General Type</label>
                             <select class="form-select"
