--- a/cedint-libra/src/main/resources/templates/pos/allPos.html
+++ b/cedint-libra/src/main/resources/templates/pos/allPos.html
@@ -24,6 +24,14 @@
             <div th:replace="~{fragments/pos-page/main-content :: main-content}"></div>
         </div>
     </div>
+
+        <script>
+            function handleDoubleClick(id){
+                console.log("CLICKED ON : " + id)
+                window.location.href="/libra/issues/create/for/" + id
+            }
+        </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
