--- a/cedint-libra/src/main/resources/templates/pos/allPos.html
+++ b/cedint-libra/src/main/resources/templates/pos/allPos.html
@@ -30,6 +30,11 @@
                 console.log("CLICKED ON : " + id)
                 window.location.href="/libra/issues/create/for/" + id
             }
+
+            function resetForm(){
+                document.getElementById("searchForm").reset()
+                window.location.href="/libra/pos/all"
+            }
         </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
